# kubernetes-kopf-demo

./: .gitignore  Makefile  Pipfile  README.md  main.py  pyproject.toml
deployment/: crds.yaml
python_operator/: __init__.py  helpers.py  operator.py
python_operator/templates/: app.yml
test-manifests/: hello-world.yml
