[tool.poetry]
name = "kopf-demo"
version = "0.1.1"
description = ""
authors = ["Věroš Kaplan <veros.kaplan@wftech.cz>"]

[tool.poetry.dependencies]
python = "^3.11"
kopf = "^1.36.1"
Jinja2 = "3.1.2"
kubernetes = "^26.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
